css fixes inc about me spacing

--- a/src/Views/Final/Header/Header.css
+++ b/src/Views/Final/Header/Header.css
@@ -8,7 +8,7 @@
   background-color: cornsilk;
   opacity: 0.6;
   border-radius: 10px;
-  margin: 10px;
+  margin: 3%;
   filter: drop-shadow(15px 15px 4px rgb(6, 72, 108));
 }
 
